# final_project_wanyingli

./: CONTRIBUTING.rst  LICENSE  README.md  Usage Example.ipynb  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: final_project_wanyingli.rst  modules.rst
final_project_wanyingli/: final_project_wanyingli.py
tests/: test_final_project_wanyingli.py
