[tool.poetry]
name = "final_project_wanyingli"
version = "0.1.0"
description = "Python package that returns the total country lending projects from the World Bank and the Asian Development Bank."
authors = ["Wanyingli <wl2722@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
